--- a/yejo/src/main/resources/static/css/consultant.css
+++ b/yejo/src/main/resources/static/css/consultant.css
@@ -50,7 +50,7 @@ h2{
     box-shadow: 0 0 5px rgba(170, 170, 170, 0.5); /* 어두운 회색 그림자 */
 }
 .money{
-	width : 100px;
+	width : 130px;
 }
 
 .tel-input {
@@ -84,4 +84,12 @@ h2{
 .inquiry{
 	width : 100%;
 	height : 300px;
+}
+.address{
+	width : 80px;
+}
+.address:hover{
+	width : 80px;
+	background-color: rgba(0,0,0,0.02);
+	cursor: pointer;
 }
