--- a/yejo/src/main/resources/static/css/reset.css
+++ b/yejo/src/main/resources/static/css/reset.css
@@ -114,7 +114,7 @@ input[type=file].input {padding:0;}
 .radiobox input {position:absolute; top:0; left:0; width:0; height:0; border:0; opacity:0; z-index:-1;}
 .radiobox label {display:inline-block;}
 .radiobox label:before {content:""; display:inline-block; vertical-align:middle; margin:-.2em 8px 0 0; width:18px; height:18px; background-color:#f4f4f4; border:1px solid #ccc; border-radius:100%;}
-.radiobox input:checked + label:before {background:#fff url("http://yejo7048.cdn1.cafe24.com/images/bbs/radiobox.png") 50% 50% no-repeat;}
+.radiobox input:checked + label:before {background:rgb(0, 0, 0) url("http://yejo7048.cdn1.cafe24.com/images/bbs/radiobox.png") 50% 50% no-repeat;}
 .radiobox input:focus + label:before {outline:2px solid highlight;}
 
 .checkbox {display:inline-block; position:relative; vertical-align:middle; margin-top:-.2em;}
